# supercompiler-experiment

./: .gitignore  Makefile  README.md  sc3.cabal
docs/paper/src/: Makefile  README  Supercompilation.fmt  Supercompilation.lhs  deduction.sty
docs/paper/src/resources/AG/: ag-bindings.eps  ag-dependencies.eps  ag-promises.eps
docs/visuals/output/: ag-history.eps  ag-sc.eps  ag-split.eps  ag.eps
docs/visuals/src/: AG-concept.graffle  AG-flows.graffle
examples/listings/: base-app.result  base-case.hm  base-case.result  base-case2.hm  base-case2.result  base-con.hm  base-con.result  base-lam.result  base-lam2.result  base-let.hm  base-let.result  base-let2.hm  base-let2.result  base-letrec.hm  base-var.result  simple-id.hm  simple-id.result  simple-id2.hm  split-2.hm  split-base.hm  split-base.result
examples/match/: 1.match  2.match  3.match  4.match  5.match  6.match  7.match  basic.match  case.match  case2.match  example.match  fail1.match  fail2.match  map.match  s4.match
examples/programs/: basic.hm  basic.result  case.hm  dup1.hm  dup1.result  dup2.hm  dup2.result  dup3.hm  dup3.result  dup4.hm  dup4.result  dup5.hm  dup5.result  let.hm  let2.hm  map.hm  map2.hm  map3.hm  map4.hm  map5.hm  map6.hm  s1.hm  s1.result  s2.hm  s2.result  s3.hm  s3.result  s4.hm  s4.result  test.hm  test.result
run/: debug  match  parse  print  sc  show
src/: Match.hs  ParseHM.hs  PpHM.hs  Supercompile.hs
src/CCO/: HM.hs
src/CCO/HM/: Base.hs  Lexer.hs  Parser.hs
src/CCO/HM/AG/: Base.ag  Data.ag  DeadCode.ag  Evaluate.ag  FreeVars.ag  Match.ag  Print.ag  Rename.ag  Split.ag  Supercompile.ag  Terminate.ag  Types.ag
